# agency-audit

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml  mock_test_catalog.json  pyproject.toml  requirements.txt
.agents/rules/: self-improvement-loop.md
.agents/skills/draft-triage-prompt/: SKILL.md
.github/scripts/: ci-db-setup.py
.github/workflows/: agency-audit-ci.yml  docker-compose-ci.yml
scripts/: check_test_db_mocks.py  qa.sh  seed-test-db.py
src/agency_audit/: __init__.py  cli.py  config.py  db.py  discovery.py  discovery_geo.py  geometry.py  geonames.py  logging_config.py  mcp_server.py  search.py  viewport.py
src/agency_audit/audit/: __init__.py  anti_scraping.py  api_detection.py  auditor.py  listing_quality.py  models.py  playwright_fetch.py  property_count.py  robots.py  scoring.py  scoring_config.yaml  tech_stack.py
src/agency_audit/loop/: __init__.py  orchestrator.py  qc.py  reaudit.py  retry.py  tracking.py
src/agency_audit/migrations/: 000_schema_migrations.sql  001_init.sql  002_add_discovery_status.sql  003_add_audit_log.sql  004_add_failed_discovery_status.sql  004_add_fulltext_search.sql  004_add_spatial_geometry.sql  005_add_city_viewport.sql  005_add_fulltext_search.sql  005_add_spatial_geometry.sql  005_viewport_presets.sql  006_add_fulltext_search.sql  006_viewport_presets.sql  __init__.py
src/agency_audit/scripts/: discovery_helper.py  seed_test_data.py
src/agency_audit/seed/: __init__.py  countries.sql
src/agency_audit/web/: app.py
src/agency_audit/web/templates/: _city_row.html  _discovery_queue.html  _recent_activity.html  _stats.html  _websites_table.html  base.html  countries.html  country_detail.html  discovery.html  overview.html  website_detail.html
tests/: conftest.py  test_audit.py  test_audit_contract.py  test_audit_coverage.py  test_basics.py  test_cli_commands.py  test_config.py  test_coverage_gaps.py  test_db.py  test_db_fixture.py  test_discovery.py  test_discovery_geo.py  test_discovery_geo_client.py  test_discovery_pipeline.py  test_geometry.py  test_geometry_integration.py  test_geonames_discovery.py  test_listing_quality.py  test_logging.py  test_loop.py  test_loop_coverage.py  test_mcp_server.py  test_mcp_tool_registration.py  test_migrations.py  test_orchestrator_errors.py  test_playwright_fetch.py  test_search.py  test_search_integration.py  test_search_tiled.py  test_tech_stack_auditor.py  test_viewport.py  test_web_app.py
tests/fixtures/: cities.sql
tests/integration/: __init__.py  test_pipeline.py
