[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agency-audit"
version = "0.1.0"
description = "Real Estate Radar — Website Discovery & Audit System"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.30",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "jinja2>=3.1",
    "httpx>=0.28",
    "selectolax>=0.3.21",
    "playwright>=1.49",
    "typer>=0.15",
    "rich>=13.9",
    "fastmcp>=0.1",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "python-json-logger>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=7.1",
    "hypothesis>=6.0",
    "ruff>=0.8",
    "mypy>=1.0",
]

[project.scripts]
agency-audit = "agency_audit.cli:app"
agency-audit-mcp = "agency_audit.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agency_audit"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.14"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["src/agency_audit"]
omit = [
    "src/agency_audit/tests/*",
    "src/agency_audit/scripts/*",
    "*/tests/*",
]

[tool.coverage.report]
fail_under = 88
show_missing = true
skip_covered = false

[dependency-groups]
dev = [
    "pytest-cov>=7.1.0",
]
